# mart_user_service

./: compose.yml
postgres_data/: postmaster.pid
postgres_data/base/1/: 2619  2696
postgres_data/base/16384/: 1247  1249  1259  16387  16388  16393  16394  16396  16397  2224  2579  2604  2606  2608  2610  2619  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
postgres_data/base/5/: 2619
postgres_data/global/: 1260  2676  pg_control  pg_internal.init
user_service/: .env  Dockerfile  pyproject.toml
user_service/user_service/: Oauth.py  Oauth2.py  admin_crud.py  admin_rout.py  crud.py  db.py  login_rout.py  main.py  router.py  schema.py  superAdminCrud.py  super_admin_rout.py  super_admin_utlis.py  user.proto  user_pb2.py  utils.py
